# variational-compiler

./: LICENSE  README.md  report.tex  variational-compiler.cabal  variational-editor-backend.cabal
src/: Main.hs  Parser.hs  VariationalCompiler.hs  VariationalProjection.hs  View.hs
src/VariationalCompiler/: Entities.hs  Json.hs  Parser.hs  Projection.hs  View.hs
testfiles/: example.c  hello.json  hello.vjava  view_input.json
