name:                variational-compiler
version:             0.1.0.0
synopsis:            Compiler for text files with variational constructs
description:         Please see README.md
homepage:            https://github.com/rikkigibson/variational-compiler#readme
license:             MIT
license-file:        LICENSE
author:              Rikki Gibson and Cody Ray Hoeft
maintainer:          rikkigibson@gmail.com
copyright:           2016 Rikki Gibson and Cody Ray Hoeft
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable variational-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
