name:                variational-compiler
version:             0.1.0.0
synopsis:            Compiler for text files with variational constructs
homepage:            https://github.com/rikkigibson/variational-compiler
license:             MIT
author:              Rikki Gibson and Cody Ray Hoeft
maintainer:          rikkigibson@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.22

source-repository head
  type:     git
  location: https://github.com/rikkigibson/variational-compiler
  branch:   master

executable variational-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base,
    aeson,
    megaparsec,
    bytestring,
    scientific,
    text,
    aeson-pretty,
    mtl
  -- ghc-options:
