name:                variational-editor-backend
version:             0.1.0.0
synopsis:            Compiler for text files with variational constructs
homepage:            https://github.com/lambda-land/variational-editor-backend
license:             MIT
author:              Rikki Gibson and Cody Ray Hoeft
maintainer:          rikkigibson@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.24

source-repository head
  type:     git
  location: https://github.com/lambda-land/variational-editor-backend
  branch:   master

executable variational-parser
  hs-source-dirs:      src
  main-is:             Parser.hs
  default-language:    Haskell2010
  other-modules:
        VariationalCompiler.Entities
        VariationalCompiler.Json
        VariationalCompiler.Parser

  build-depends:
    base,
    aeson,
    megaparsec,
    bytestring,
    scientific,
    text,
    aeson-pretty,
    mtl,
    unordered-containers
  -- ghc-options:
